--- a/src/app/Components/explain-slides/explain-slides.component.scss
+++ b/src/app/Components/explain-slides/explain-slides.component.scss
@@ -4,7 +4,7 @@ ion-content {
     --padding-bottom: 0vh;
     --padding-start: 0vw;
     --padding-end: 0vw;
-    --background: rgba(0, 0, 0, 0.3) !important;
+    --background: rgba(69, 69, 69, 0.3) !important;
 }
 
 
@@ -28,38 +28,73 @@ ion-slides {
   }
 
 
+  .question {
+    margin-top: 7px;
+    margin-right: 5vw;
+    width: 50px;
+    height: 50px;
+    float: right;
+    background: url('../../../assets/sign_in/question.svg');
+    background-repeat: no-repeat;
+    background-position: center;
+  }
 
  .pstyle1 {
         font-family: effra;
-        font-size: 35px;
-        font-weight: bold;
+        font-size: 8vw;
+        font-weight: 500;
         color:white;
         opacity: 0.87;
         text-align: left;
         padding-left:10vw;
-        padding-right:5vw; 
+        padding-right:10vw; 
   }
 
   .pstyle2 {
     font-family: effra;
-    font-size: 20px;
+    font-size: 5vw;
     color:white;
-    font-weight: 500;
     line-height: 24px;
     text-align: left;
     padding-left:10vw;
-    padding-right:5vw;
+    padding-right:10vw;
 }
-
+.pstyle3 {
+  font-family: effra;
+  font-size: 4vw;
+  color:white;
+  line-height: 24px;
+  text-align: left;
+  padding-left:10vw;
+  padding-right:10vw;
+}
+.pstyle4 {
+  font-family: effra;
+  font-size: 3vw;
+  color: rgb(255, 255, 255, 0.5);
+  text-align: left;
+  padding-left:10vw;
+  padding-right:10vw;
+  margin-block-start: 0px; 
+  margin-block-end: 0px;
+}
 .primary {
   --box-shadow: white;
   --background:white;
-  padding-right: 8%;
-  padding-bottom: 8%;
+  padding-right: 10vw;
 }
-
+.slide-bar-color{
+ 
+    width: 10px;
+    height: 10px;
+    float: left;
+    margin-right: 5px;
+    border-radius: 5px;
+    background-color: black;
+    margin-top: 35px;
+}
 .footer1 {
-  background-color: rgba(0, 0, 0, 0.3);
+  background: rgba(69, 69, 69, 0.3) !important;
 }
 
 div.swiper-pagination {
@@ -79,4 +114,29 @@ swiper-pagination {
   top:5px;
   bottom:inherit;
   height: 500px;
+}
+
+.name {
+  border-radius: 5px;
+  background-color: #4F4F4F;
+  border: 0px;
+  padding-left: 20px;
+  margin-left: 10vw;
+  margin-right: 10vw;
+  
+}
+
+input {
+  width: 100%;
+  height: 50px;
+  
+}
+::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: white;
+  opacity: 0.5;
+  /* Firefox */
+  font-family: effra;
+  font-size: 4vw;
+
 }
