Adjusts anoymous login to new login flow

--- a/src/app/Components/explain-slides/explain-slides.component.html
+++ b/src/app/Components/explain-slides/explain-slides.component.html
@@ -97,7 +97,7 @@
     </div>
     <ng-template #notHideNext>
       <button ion-button class="login-btn">
-        <ion-text style="color:black">Anmelden</ion-text>
+        <ion-text style="color:black" (click)="signUp()">Anmelden</ion-text>
       </button>
     </ng-template>
   </div>
