Implements Name & Contact in Explain Slides

--- a/src/app/Components/explain-slides/explain-slides.component.html
+++ b/src/app/Components/explain-slides/explain-slides.component.html
@@ -62,10 +62,10 @@
         </div>
         <div style="margin-top: 20vw;">
           <ion-row>
-            <input ion-input class="name" placeholder="NAME*" />
+            <input ion-input class="name" placeholder="NAME*" [(ngModel)]="name"/>
           </ion-row>
           <ion-row>
-            <input ion-input class="name mt30" placeholder="E-MAIL/HANDYNUMMER*" />
+            <input ion-input class="name mt30" placeholder="E-MAIL/HANDYNUMMER*" [(ngModel)]="contact"/>
           </ion-row>
           <ion-row class="mt30">
             <div style="overflow: auto; width: 100%; height: 120px;">
