--- a/src/app/Components/search-bar/search-bar.component.html
+++ b/src/app/Components/search-bar/search-bar.component.html
@@ -1,14 +1,18 @@
 <div class="over" >
         <div class="wrap" >
             <!-- <ion-input class="search" debounce=500   [(ngModel)]="selectedAddresses" (ionChange)="search($event)"  placeholder="Hier suchen.." ></ion-input> -->
-            <ion-input class="search" debounce=500 [(ngModel)]="searchBarInputV" type="text" (ngModelChange)="search($event)"  placeholder="Hier suchen.." ></ion-input>
-            <div style="position:absolute; width:100%; z-index:999;margin-top:7.5em ;left:0%">
-                <ion-list lines="none" *ngIf="addressesString.length > 0"> 
+            <ion-input class="search" debounce=500 [(ngModel)]="searchBarInputV" type="text" (ngModelChange)="search($event)"  placeholder="Hier suchen..." >      
+            </ion-input>
+            <div *ngIf = "searchBarInputV != '';" style="position:absolute; width:100%; z-index:999;margin-top:7.5em ;left:0%">
+                <ion-list lines="none" > 
                     <ion-item button *ngFor="let address of addressesString" (click)="onSelect(address)">
                         <ion-icon name ="pin"></ion-icon>
                         {{address[1]}}
                     </ion-item>
                 </ion-list>
+            </div>
+            <div *ngIf = "searchBarInputV != ''; " style= "margin-left: 275px; margin-top: 7px; position: absolute;" >
+                <ion-icon name= "close-outline" (click)="clear()" style="font-size: 36px;"></ion-icon>
             </div>
             <button class="btn"><img src="'../../../assets/settings/profile-pic.jpg" alt="Avatar"></button>
         </div>
