--- a/src/app/pages/sign_up/sign-up-tab1/sign-up-tab1.page.html
+++ b/src/app/pages/sign_up/sign-up-tab1/sign-up-tab1.page.html
@@ -10,6 +10,16 @@
             </h2>
         </ion-col>
     </ion-row>
+    <ion-row>
+
+          <div class="button-cover">
+           <div class="button r" id="button-1">
+             <input type="checkbox" class="checkbox">
+              <div class="knobs"> </div>                      
+              <div class="layer"> </div>
+          </div>
+          </div>
+    </ion-row>
 </ion-content>
 <ion-footer class="footer" no-shadow ion-no-border>
     <ion-row>
