--- a/src/app/pages/settings/settings-main/settings-main.page.html
+++ b/src/app/pages/settings/settings-main/settings-main.page.html
@@ -4,7 +4,7 @@
             <ion-col size="9">
             </ion-col>
             <ion-col size="3">
-                <button class="cancel"></button>
+                <button class="cancel" (click)="goToSettingsMainDropbox()"></button>
             </ion-col>
         </ion-row>
     </ion-grid>
@@ -28,7 +28,7 @@
         <p style="text-align: center">*FREIWILLIG:</p>
         <p>Falls du in einem Verband fährst, ein Unfall
         passiert und Zeugen<br/>gebraucht werden, können wir dich erreichen
-    wenn du uns hier<br/>deinen Namen und eine Mail/Nummer hinterlässt. MEHR INFOS</p>
+    wenn du uns hier<br/>deinen Namen und eine Mail/Nummer hinterlässt. <a href="#"><u>MEHR INFOS</u></a></p>
     </ion-grid>
 </ion-content>
 <ion-footer class="footer" no-shadow>
