--- a/src/app/pages/settings/settings-main/settings-main.page.scss
+++ b/src/app/pages/settings/settings-main/settings-main.page.scss
@@ -40,8 +40,11 @@ ion-content {
     height: 50px;
     background: url('../../../../assets/settings/x-cancel.svg');
     background-repeat: no-repeat;
+    background-size: 20px;
     background-position: center;
 }
+
+
 
 h1 {
     font-family: effra;
