--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -204,7 +204,7 @@
    */
 
   .md body {
-    --ion-background-color: ##383838;
+    --ion-background-color: #383838;
     --ion-background-color-rgb: 18,18,18;
 
     --ion-text-color: #ffffff;
