--- a/src/app/pages/settings/settings-main/settings-main.page.scss
+++ b/src/app/pages/settings/settings-main/settings-main.page.scss
@@ -1,9 +1,15 @@
+.col-adjust{
+    align-self: center;
+}
+
+
 ion-header {
     padding-left: 30px;
     padding-right: 30px;
-    padding-top: 20px;
+    padding-top: 22px;
     background-color: #242323;
     overflow: hidden;
+
 }
 
 ion-footer {
@@ -42,6 +48,8 @@ ion-content {
     background-repeat: no-repeat;
     background-size: 20px;
     background-position: center;
+     background-position-x: right;
+ 
 }
 
 
